fix: fixed long file name wrapping in language panel of documents tab (ZNTA-1647)

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -3703,6 +3703,15 @@ button.list-group-item {
   background-color: #fff;
 }
 
+#documents h2 span#document-label {
+  max-width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  word-wrap: normal;
+  hyphens: initial;
+}
+
 .panel-heading > .dropdown .dropdown-toggle {
   color: inherit;
 }
